# icloud-rs

./: .gitignore  Cargo.toml
lib/: Cargo.toml
lib/src/: deserial.rs  drive.rs  err.rs  lib.rs
lib/src/services/: calendar.rs  drive.rs  mod.rs
