[workspace]
resolver = "2"
members = [
    "lib",
    "bin"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Daniel Weiland <daniel@weilxnd.com>"]
description = "iCloud for Rust"

[workspace.dependencies.tokio]
version = "1.32.0"
features = [
    "net",
    "macros",
    "rt-multi-thread"
]
