[package]
name = "nefos-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies.reqwest]
version = "0.11.22"
features = [
    "json",
    "cookies"
]

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]

[dependencies]
tokio = { workspace = true }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
dirs = "5.0.1"
reqwest_cookie_store = "0.6.0"
